<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.CardView"
    >

    <LinearLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/ivPlayerIcon"
            style="@style/AppTheme.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvName"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="rihard" />

        <TextView
            android:id="@+id/tvEstimated"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_estimated"
            />

        <TextView
            android:id="@+id/tvSolo"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_solo"
            />

        <TextView
            android:id="@+id/tvParty"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_party"
            />

        <TextView
            android:id="@+id/tvRank"
            style="@style/AppTheme.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rank"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btEdit"
            style="@style/AppTheme.CardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>